# vector_db

./: Cargo.toml
src/: faiss_index.rs  index_builder.rs  index_factory.rs  lib.rs  main.rs
src/core/: index_factory.rs  mod.rs
src/core/builder/: faiss_index_builder.rs  hnsw_index_builder.rs  index_handle.rs  usearch_index_builder.rs
src/core/index/: faiss_index.rs  filter_index.rs  hnsw_index.rs  usearch_index.rs
src/db/: mod.rs  scalar_storage.rs  vector_database.rs
src/error/: app_error.rs
src/models/: mod.rs
src/models/request/: create.rs  insert.rs  query.rs  search.rs  upsert.rs
src/models/response/: create.rs  insert.rs  query.rs  search.rs  upsert.rs
src/router/: mod.rs
src/router/handle/: create_handle.rs  create_index_handle.rs  insert_handle.rs  insert_index_handle.rs  query_handle.rs  search_handle.rs  search_index_handle.rs  upsert_handle.rs
