[package]
name = "vector_db"
version = "0.1.0"
edition = "2024"

[dependencies]
faiss = "0.12.1"
log = "0.4"
env_logger = "0.10"
anyhow = "1"
axum = "0.7" 
tokio = { version = "1", features = ["full"] } 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
tower = "0.4"
hyper = "0.14"
rstest = "0.22.0"
hnsw_rs = "0.3.2"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"]}
tempfile = "3.20.0"
